clusters/cluster/apps/verein-int/fider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fider
  namespace: verein-int
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fider
  template:
    metadata:
      labels:
        app: fider
    spec:
      containers:
      - name: fider
        image: getfider/fider:stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
