clusters/cluster/apps/verein-int/fider/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fider-db
  namespace: verein-int
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fider-db
  template:
    metadata:
      labels:
        app: fider-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: fider-db-pvc
