clusters/cluster/apps/verein-int/fider/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fider-db
  namespace: verein-int
spec:
  type: ClusterIP
  selector:
    app: fider-db
  ports:
    - port: 5432
      targetPort: postgres
      name: postgres
