clusters/cluster/apps/verein-int/fider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fider
  namespace: verein-int
spec:
  selector:
    app: fider
  ports:
    - port: 80
      targetPort: http
      name: http
  type: ClusterIP
