clusters/cluster/apps/verein-int/fider/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fider
  namespace: verein-int
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: ideas.eggl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fider
                port:
                  name: http
  tls:
    - hosts:
        - ideas.eggl.one
      secretName: eggl-one-wildcard-tls
